<resources>

    <!--Login/Registration-->
    <string name="app_name">ProjectLogin</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="reenter_password">re-enter password</string>
    <string name="sign_in_button">sign in</string>
    <string name="sign_up_button">sign up</string>

    <!--Intro-->
    <string name="intro_next_button">next</string>
    <string name="intro_skip_button">skip</string>
    <string name="start">got it</string>

    <string name="slide_1_title">Evgeni Malkin</string>
    <string name="slide_1_desc">Pittsburgh Penguins</string>

    <string name="slide_2_title">Vladimir Tarasenko</string>
    <string name="slide_2_desc">St.Louis Blues</string>

    <string name="slide_3_title">Sergey Bobrovsky</string>
    <string name="slide_3_desc">Columbus Blue Jackets</string>

    <string name="slide_4_title">Nikita Kucherov</string>
    <string name="slide_4_desc">Tampa Bay Lighting</string>
    <string name="title_activity_team">TeamActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
