<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexredchets.projectlogin.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="250sp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:textStyle="bold" />
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:layout_marginTop="50dp"/>
    </LinearLayout>


</RelativeLayout>
